
export class Stream {
  constructor(
    public readonly random: string
  ) {
  }
}
